feat : InputManager 맥호환성 추가 테스트