@@ -45,7 +45,14 @@ public class OutPutTest {
 
     public static void clearConsole(){
         try {
-            new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            final String os = System.getProperty("os.name");
+
+            if (os.contains("Windows")) {
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            }
+            else {
+                Runtime.getRuntime().exec("clear");
+            }
         } catch (IOException | InterruptedException e) {
             throw new RuntimeException(e);
         }
